--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <link rel='stylesheet' href='screen.css' />
 </head>
 <body>
-  <h1>Iva Veseli<br></h1>
+  <h1>Iva Veseli</h1>
 
-  <h3>About Me<br></h3>
+  <h3>About Me</h3>
   <p>
     I am a B.S. Biology/M.S. Computer Science co-terminal degree student at Illinois
     Institute of Technology in Chicago, currently in my fourth and final year. I
@@ -18,7 +18,7 @@
     interdisciplinary and I spend most of my time on a computer, at heart I consider
     myself a biologist - I enjoy programming and often write computer programs that
     will facilitate my research, but ultimately it is the biologically-relevant
-    results of my projects that pique my curiosity and motivate my studies.<br>
+    results of my projects that pique my curiosity and motivate my studies.
   </p>
   <p>
     My career goal is to become a principal investigator and professor at a research
@@ -29,7 +29,7 @@
     these fields, I have also had the opportunity to take advanced courses that will
     be useful and relevant to my future research. These include Functional Genomics,
     Bioinformatics, Machine Learning, Data Mining, Algorithms, Data-intensive
-    Computing, and Web Design.<br>
+    Computing, and Web Design.
   </p>
   <p>
     I am involved in a number of extracurricular endeavors that expand my experience
@@ -38,7 +38,7 @@
     ropes of genomics research - from culturing and DNA isolation to sequencing,
     genome annotation and assembly. My projects focus primarily on comparative
     genomics of bacterial genomes, though I have also assisted with more
-    computational work such as the development of a SNP-calling pipeline.<br>
+    computational work such as the development of a SNP-calling pipeline.
   </p>
   <p>
     In addition to research, I hone my teaching skills by working as a teaching
@@ -51,11 +51,11 @@
     high- performance computing community. We are working towards optimizing
     scientific applications so that run efficiently on our custom-built cluster;
     this endeavor will give me more experience with computer hardware and an
-    under-the-hood view of scientific computing.<br>
+    under-the-hood view of scientific computing.
   </p>
   <p>
     I am currently applying to graduate school PhD programs in Computational Biology
-    and related fields.<br>
+    and related fields.
   </p>
 </body>
 </html>
