--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>Iva Veseli</h1>
-
+<article>
   <h3>About Me</h3>
   <p>
     I am a B.S. Biology/M.S. Computer Science co-terminal degree student at Illinois
@@ -57,5 +57,6 @@
     I am currently applying to graduate school PhD programs in Computational Biology
     and related fields.
   </p>
+</article>
 </body>
 </html>
