--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel='stylesheet' href='screen.css' />
 </head>
 <body>
+  <main id="content">
   <h1>Iva Veseli</h1>
 <article>
   <h3>About Me</h3>
@@ -58,5 +59,6 @@
     and related fields.
   </p>
 </article>
+</main>
 </body>
 </html>
