--- a/index.html
+++ b/index.html
@@ -60,5 +60,8 @@
   </p>
 </article>
 </main>
+<aside id='contactme'>
+  <!-- TO DO: Add email, links to LinkedIn, ORCID, etc -->
+</aside>
 </body>
 </html>
