Add commented out skeleton code for an image

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
   <main id="content">
   <h1>Iva Veseli</h1>
+
+  <!-- TODO: Add image of me here -->
+  <!-- <img src="myimage.jpg" />
+  -->
 <article>
   <h3>About Me</h3>
   <p>
