Update img comment to be more accessible (with figcaption)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
   <h1>Iva Veseli</h1>
 
   <!-- TODO: Add image of me here -->
-  <!-- <img src="myimage.jpg" />
+  <!--
+  <figure>
+    <img src="myimage.jpg" alt="Photo of Iva Veseli" />
+    <figcaption>
+      This is an image of me in the lab.
+    </figcaption>
+  </figure>
   -->
 <article>
   <h3>About Me</h3>
