Add contact list (no links)

--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
 </main>
 <aside id='contactme'>
   <!-- TO DO: Add email, links to LinkedIn, ORCID, etc -->
+  <ul>
+    <li> Contact me via email </li>
+    <li> My LinkedIn Page </li>
+    <li> My ORCID Page </li>
+  </ul>
 </aside>
 </body>
 </html>
