Add links to contact list

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
 <aside id='contactme'>
   <!-- TO DO: Add email, links to LinkedIn, ORCID, etc -->
   <ul>
-    <li> Contact me via email </li>
-    <li> My LinkedIn Page </li>
-    <li> My ORCID Page </li>
+    <li> <a href='mailto:iva.veseli@gmail.com'>Contact me via email</a></li>
+    <li> <a href='https://www.linkedin.com/in/iva-veseli/' target='_blank'>My LinkedIn Page</a></li>
+    <li> <a href='http://orcid.org/0000-0003-2390-5286' target='_blank'>My ORCID Page</a></li>
   </ul>
 </aside>
 </body>
